--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "node": "^17.7.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.16"
   }
 }
